--- a/css/index.css
+++ b/css/index.css
@@ -279,11 +279,14 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transition: opacity 0.4s ease;
+  transition: opacity 0.6s ease-in-out;
 }
 
+
 .country-card:hover img {
-  opacity: 0.5;
+  opacity: 0.75;
+  transform: scale(1.03);
+  filter: blur(1px);
 }
 
 .country-card .overlay {
@@ -347,24 +350,30 @@ body {
   flex-wrap: wrap;
   gap: 2rem;
 }
-
 .stat-box {
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(5px);
-  padding: 2rem;
-  border-radius: 15px;
-  width: 200px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s;
+  background: #ffffff;
+  padding: 2.3rem;
+  border-radius: 25px;
+  width: 250px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.12); /*shadow */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .stat-box:hover {
-  transform: translateY(-5px);
+  transform: translateY(-8px);
+  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.22);
+}
+
+.stat-box .rolling-counter {
+  font-size: 3.3rem;
+  font-weight: 800;
+  color: #333; ;
 }
 
 .stat-box p {
-  font-size: 1rem;
-  opacity: 0.9;
+  color: #444;
+  font-size: 1.1rem;
+  margin-top: 1rem;
 }
 
 /* ========= Rolling Counter (Slot Effect) ========= */
