--- a/css/index.css
+++ b/css/index.css
@@ -551,7 +551,7 @@ details p {
   bottom: 30px;
   right: 30px;
   z-index: 9999;
-  background-color: #ff6b6b;
+  background-color: #d8c3a5;
   color: white;
   border: none;
   outline: none;
@@ -564,7 +564,7 @@ details p {
 }
 
 #toTopBtn:hover {
-  background-color: #ff4040;
+  background-color: #c0b090;
   transform: scale(1.1);
 }
 
